2006-03-27  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultCaret.java:
	(mouseClicked): Word selection rewritten.
	(paint): Draw line inside the bounding rectangle.
	(damage): Retrieve caret height from line height.

2006-03-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(commitBuffer): Use simple drawImage() method instead of the
	scaling version.

2006-03-27  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicSliderUI.java
	(FocusHandler.focusGained): Marked as stub,
	(FocusHandler.focusLost): Likewise,
	(installKeyboardActions): Likewise,
	(uninstallKeyBoardActions): Likewise.

2006-03-27  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java: Replaced TABs with spaces.

2006-03-27  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java: Updated API docs all over.

2006-03-28  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/gnu/classpath/tools/jarsigner/Main.java (processArgs): Check
	for null args.
	Check for -help option.
	* tools/gnu/classpath/tools/jarsigner/jarsigner.txt: Added -help option.

2006-03-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/FieldView.java
	(getPreferredSpan): Don't include trailing newline in
	calculations.
	* javax/swing/text/PlainView.java
	(drawLine): Don't include trailing newline.
	(determineMaxLineLength): Don't include trailing newline.
	(getLineBuffer): Made method final.

2006-03-27  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java
	(AccessibleJSlider.AccessibleJSlider): Minor API doc edit,
	(AccessibleJSlider.getAccessibleRole): Removed declaration of 
	NotImplementedException,
	(AccessibleJSlider.getAccessibleValue): Updated API docs.

2006-03-26  Tom Tromey  <tromey@redhat.com>

	* NEWS: Updated.
	* vm/reference/java/lang/reflect/Method.java (METHOD_MODIFIERS):
	New constant.
	(getModifiersInternal): Renamed from getModifiers.